Fix body no value

--- a/.github/workflows/publish_pre_release.yml
+++ b/.github/workflows/publish_pre_release.yml
@@ -87,7 +87,7 @@ jobs:
               with:
                   tag_name: v${{ env.PACKAGE_VERSION }}
                   release_name: ${{ env.PACKAGE_VERSION }}
-                  body: "##### ${{ github.event.inputs.bumprelease }}"
+                  body: "##### ${{ env.bumprelease }}"
                   draft: false
                   prerelease: true
 
