--- a/.github/workflows/publish_pre_release.yml
+++ b/.github/workflows/publish_pre_release.yml
@@ -1,8 +1,8 @@
 name: Publish Pre-release
 
 on:
-    schedule:
-        - cron: "0 0 * * *"
+#     schedule:
+#         - cron: "0 0 * * *"
     workflow_dispatch:
         inputs:
             bumprelease:
