--- a/.github/workflows/publish_pre_release.yml
+++ b/.github/workflows/publish_pre_release.yml
@@ -60,7 +60,6 @@ jobs:
                   npm-cli-login -u $NPM_USER -p $NPM_PASS -e "$NPM_EMAIL" -r "https://npm.pkg.github.com" -s "@betterdiscordbuilder"
 
             - name: Bump a package version
-              if: steps.build_prerelease.outcome == 'success'
               id: bump_version
               run: |
                   npm install -g version-bump-prompt
@@ -70,6 +69,7 @@ jobs:
               run: npm install
             - name: Run script
               id: build_prerelease
+              if: steps.bump_version.outcome == 'success'
               run: npm run script:publish_prerelease
 
             - uses: nyaa8/package-version@v1
