--- a/package.json
+++ b/package.json
@@ -14,8 +14,8 @@
 		"script:auth": "node ./script/authentication.js",
 		"script:releases": "node ./script/releases.js",
 		"publish_setup": "npm run script:releases && npm run npm-install && npm run prettier",
-		"script:publish_stable": " npm run publish_setup && npm run build && npm run build_dev && eslint ./RPCPcStatus.devlop.js ./RPCPcStatus.plugin.js --config .eslintrc.js --debug --fix",
-		"script:publish_prerelease": "npm run publish_setup && npm run build_dev && eslint ./RPCPcStatus.devlop.js --config .eslintrc.js --debug --fix && git checkout ./src/package.json"
+		"script:publish_stable": " npm run publish_setup && npm run build && npm run build_dev && eslint ./pre-release/RPCPcStatus.plugin.js  ./RPCPcStatus.plugin.js --config .eslintrc.js --debug --fix",
+		"script:publish_prerelease": "npm run publish_setup && npm run build_dev && eslint ./pre-release/RPCPcStatus.plugin.js --config .eslintrc.js --debug --fix && git checkout ./src/package.json"
 	},
 	"repository": {
 		"type": "git",
