Add Ignore actions-user

--- a/.github/workflows/publish_pre_release.yml
+++ b/.github/workflows/publish_pre_release.yml
@@ -39,6 +39,7 @@ jobs:
               id: commitswithintime
               with:
                   hours: 24
+                  usernamesToIgnore: '{"ignoredUsernamesList": ["actions-user"]}'
 
             - name: Get the output from CommitsWithinTime
               run: |
