--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
 		"@betterdiscordbuilder/bdbuilder": "^1.2.22",
 		"edit-json-file": "^1.7.0",
 		"eslint": "^8.16.0",
+		"eslint-plugin-json": "^3.1.0",
 		"eslint-plugin-no-one-time-vars": "^2.4.1",
 		"eslint-plugin-prettier": "^4.0.0",
 		"npm-check-updates": "^13.0.3",
